# Bulk

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  index.html  sitemap.xml
.github/workflows/: cmake.yml  cpp-test.yml
CHANGELOG/: index.html
README/: index.html
api/: index.html
api/coarray/: index.html
api/environment/: index.html
api/flatten/: index.html
api/foldl/: index.html
api/future/: index.html
api/gather_all/: index.html
api/get/: index.html
api/log/: index.html
api/partitioning/: index.html
api/put/: index.html
api/queue/: index.html
api/timer/: index.html
api/unflatten/: index.html
api/var/: index.html
api/world/: index.html
backends/bsp/: bsp.hpp  messages.hpp  provider.hpp
backends/cpp/: .gitignore  backend.hpp  bulk.hpp  coarray.hpp  cpp.hpp  environment.hpp  (+5 more)
benchmark/: benchmark.cpp  fit.hpp  report.hpp
bsp/: index.html
bulk_vs_bsplib/: index.html
coarrays/: index.html
docs/: Makefile  README.md  conf.py  index.rst  introduction.md  introduction.rst  main_concepts.rst  mkdocs.yml
environment_world/: index.html
examples/: cannon.cpp  communication.cpp  dot_product.cpp  fft.cpp  fft_bspedupack.cpp  hello.cpp  messaging.cpp  partitioning.cpp  set_backend.hpp  word_count.cpp
getting_started/: index.html
include/: bulk.hpp  bulk_bsp.hpp  bulk_util.hpp
index_/: index.html
message_passing/: index.html
mkdocs/: search_index.json
psc/: index.html
search/: search_index.json
test/: algorithm.cpp  array.cpp  bulk_test_common.hpp  communication.cpp  initialization.cpp  partitioning.cpp  set_backend.hpp  test_main.cpp
tour/: index.html
variables/: index.html
(+412 files in other folders)
